# opencv-temporal-tracking-test

./: .gitignore  AppParamsManager.cpp  AppParamsManager.h  CMakeLists.txt  ColorBasedTargetDetector.cpp  ColorBasedTargetDetector.h  DesktopTest.cpp  DesktopTest.h  FpsCounter.cpp  FpsCounter.h  HeadlessApp.cpp  HeadlessApp.h  IMainApplication.h  Main.cpp  README.md  RobotComms.cpp  RobotComms.h  TimeUtils.cpp  TimeUtils.h  config-max-perf.sh  remote-build.sh  upstart-vision-runner.conf
Visual Studio Solution/: TemporalTrackingTest.sln
Visual Studio Solution/TemporalTrackingTest/: TemporalTrackingTest.vcxproj  TemporalTrackingTest.vcxproj.filters
lib/: PracticalSocket.cpp  json.h
